# Master_computer_graphic

./: .gitignore  README.md
lab1/: CMakeLists.txt  main.cpp  vcpkg.json
lab1/src/: CMakeLists.txt  camera.cpp  camera.h  column.cpp  column.h  cube.cpp  cube.h  line.h  polygon.cpp  polygon.h  vertex.h
lab2/: CMakeLists.txt  main.cpp  vcpkg.json
lab2/shaders/: fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex.glsl
lab2/src/: CMakeLists.txt  buffers.h  camera.cpp  camera.h  cameraController.cpp  cameraController.h  glfwWindow.h  shader.h  shaderProgram.h  skybox.cpp  skybox.h
